JAWAINDWORK-3 Start Menu Completed

--- a/Battleship/BattleShip_Start/BattleShip.BLL/BattleShip.BLL.csproj
+++ b/Battleship/BattleShip_Start/BattleShip.BLL/BattleShip.BLL.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="GameLogic\Board.cs" />
     <Compile Include="GameLogic\CoordinateConverter.cs" />
+    <Compile Include="GameLogic\DirectionConverter.cs" />
     <Compile Include="GameLogic\GameManager.cs" />
     <Compile Include="GameLogic\ShipCreator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
