--- a/Battleship/BattleShip_Start/BattleShip.BLL/BattleShip.BLL.csproj
+++ b/Battleship/BattleShip_Start/BattleShip.BLL/BattleShip.BLL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="GameLogic\DirectionConverter.cs" />
     <Compile Include="GameLogic\DirectionPlacementValidation.cs" />
     <Compile Include="GameLogic\GameManager.cs" />
+    <Compile Include="GameLogic\GameSetup.cs" />
     <Compile Include="GameLogic\ShipCreator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Requests\Coordinate.cs" />
