JAWAINDWORK-14 finished Transfer and Withdraw workflow

--- a/SGBank/SGBank.UI/SGBank.UI.csproj
+++ b/SGBank/SGBank.UI/SGBank.UI.csproj
@@ -45,9 +45,13 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Workflows\CreateAccountWorkflow.cs" />
+    <Compile Include="Workflows\DeleteAccountWorkflow.cs" />
     <Compile Include="Workflows\DepositWorkflow.cs" />
     <Compile Include="Workflows\LookupWorkflow.cs" />
     <Compile Include="Workflows\MainMenu.cs" />
+    <Compile Include="Workflows\TransferWorkflow.cs" />
+    <Compile Include="Workflows\WithdrawWorkflow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
