--- a/SGBank/SGBank.Models/SGBank.Models.csproj
+++ b/SGBank/SGBank.Models/SGBank.Models.csproj
@@ -44,6 +44,8 @@
     <Compile Include="DepositReciept.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Response.cs" />
+    <Compile Include="TransferReceipt.cs" />
+    <Compile Include="WithdrawReceipt.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
