--- a/SGBank/SGBank.Models/SGBank.Models.csproj
+++ b/SGBank/SGBank.Models/SGBank.Models.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Account.cs" />
+    <Compile Include="CreateAccountReceipt.cs" />
+    <Compile Include="DeleteAccountReceipt.cs" />
     <Compile Include="DepositReciept.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Response.cs" />
