Added dependency injection to SGBank still need to test UpdateAccount

--- a/SGBank/SGBank.Data/SGBank.Data.csproj
+++ b/SGBank/SGBank.Data/SGBank.Data.csproj
@@ -41,7 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountRepository.cs" />
+    <Compile Include="IAccountRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="FakeRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SGBank.Models\SGBank.Models.csproj">
