JAWAINDWORK-16 Ui created

--- a/FlooringMastery/FlooringMastery.BLL/FlooringMastery.BLL.csproj
+++ b/FlooringMastery/FlooringMastery.BLL/FlooringMastery.BLL.csproj
@@ -43,6 +43,16 @@
     <Compile Include="OrderManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FlooringMastery.Data\FlooringMastery.Data.csproj">
+      <Project>{7f182f30-e0ed-4bbe-a197-e29f37b6e279}</Project>
+      <Name>FlooringMastery.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FlooringMastery.Models\FlooringMastery.Models.csproj">
+      <Project>{fd10d278-51ac-406a-992a-97b9f79a50d9}</Project>
+      <Name>FlooringMastery.Models</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
