--- a/FlooringMastery/FlooringMastery.Data/FlooringMastery.Data.csproj
+++ b/FlooringMastery/FlooringMastery.Data/FlooringMastery.Data.csproj
@@ -41,7 +41,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="OrderRepository.cs" />
+    <Compile Include="Product.cs" />
+    <Compile Include="ProductRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tax.cs" />
+    <Compile Include="TaxRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FlooringMastery.Models\FlooringMastery.Models.csproj">
