--- a/FlooringMastery/FlooringMastery.Data/FlooringMastery.Data.csproj
+++ b/FlooringMastery/FlooringMastery.Data/FlooringMastery.Data.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FakeRepository.cs" />
+    <Compile Include="IOrderRepository.cs" />
     <Compile Include="OrderRepository.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="ProductRepository.cs" />
