--- a/FlooringMastery/FlooringMastery.Tests/FlooringMastery.Tests.csproj
+++ b/FlooringMastery/FlooringMastery.Tests/FlooringMastery.Tests.csproj
@@ -51,6 +51,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
