--- a/FlooringMastery/FlooringMastery.Models/FlooringMastery.Models.csproj
+++ b/FlooringMastery/FlooringMastery.Models/FlooringMastery.Models.csproj
@@ -44,8 +44,10 @@
     <Compile Include="DeleteOrderReceipt.cs" />
     <Compile Include="EditOrderReceipt.cs" />
     <Compile Include="Order.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Response.cs" />
+    <Compile Include="Tax.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
