SIS MVC finished

--- a/MVC_SIS/Exercises/Exercises.csproj
+++ b/MVC_SIS/Exercises/Exercises.csproj
@@ -157,6 +157,7 @@
     <Content Include="Views\Admin\EditState.cshtml" />
     <Content Include="Views\Admin\DeleteState.cshtml" />
     <Content Include="Views\Student\Edit.cshtml" />
+    <Content Include="Views\Student\DeleteStudent.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
