--- a/HR Portal/HR Portal/HR Portal.csproj
+++ b/HR Portal/HR Portal/HR Portal.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Models\Data\Policy.cs" />
     <Compile Include="Models\Repositories\CategoryRepository.cs" />
     <Compile Include="Models\Repositories\PolicyRepository.cs" />
+    <Compile Include="Models\ViewModels\AddPolicyVM.cs" />
     <Compile Include="Models\ViewModels\PolicyVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -165,6 +166,13 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\ViewPolicies.cshtml" />
+    <Content Include="Views\Home\ViewPolicyItem.cshtml" />
+    <Content Include="Views\Home\ManagePolicies.cshtml" />
+    <Content Include="Views\Home\DeletePolicy.cshtml" />
+    <Content Include="Views\Home\ManageCategories.cshtml" />
+    <Content Include="Views\Home\DeleteCategory.cshtml" />
+    <Content Include="Views\Home\AddCategory.cshtml" />
+    <Content Include="Views\Home\AddPolicy.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
