--- a/HR Portal/HR Portal/HR Portal.csproj
+++ b/HR Portal/HR Portal/HR Portal.csproj
@@ -124,8 +124,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Data\Application.cs" />
     <Compile Include="Models\Data\Category.cs" />
+    <Compile Include="Models\Data\Employee.cs" />
     <Compile Include="Models\Data\Policy.cs" />
+    <Compile Include="Models\Data\TimeSheet.cs" />
+    <Compile Include="Models\Repositories\ApplicationRepository.cs" />
+    <Compile Include="Models\Repositories\EmployeeRepository.cs" />
     <Compile Include="Models\Repositories\CategoryRepository.cs" />
     <Compile Include="Models\Repositories\PolicyRepository.cs" />
     <Compile Include="Models\ViewModels\AddPolicyVM.cs" />
@@ -173,6 +178,7 @@
     <Content Include="Views\Home\DeleteCategory.cshtml" />
     <Content Include="Views\Home\AddCategory.cshtml" />
     <Content Include="Views\Home\AddPolicy.cshtml" />
+    <Content Include="Views\Home\apply.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
