--- a/DVDLibrary/DVDLibrary.BLL/DVDLibrary.BLL.csproj
+++ b/DVDLibrary/DVDLibrary.BLL/DVDLibrary.BLL.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DVDManager.cs" />
+    <Compile Include="IDVDManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
