--- a/BaseballLeague/BaseballLeague/BaseballLeague.UI.csproj
+++ b/BaseballLeague/BaseballLeague/BaseballLeague.UI.csproj
@@ -203,6 +203,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\PlayerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -212,6 +213,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\PlayerViewModel.cs" />
+    <Compile Include="Models\TeamViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -222,6 +224,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\app\_addPlayer.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -272,6 +275,9 @@
     <Content Include="Views\Home\ViewPlayerList.cshtml" />
     <Content Include="Views\Home\DeletePlayer.cshtml" />
     <Content Include="Views\Home\TradePlayer.cshtml" />
+    <Content Include="Views\Home\ViewTeams.cshtml" />
+    <Content Include="Views\Home\AddTeam.cshtml" />
+    <Content Include="Views\Shared\_CreatePlayerModal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
