--- a/BaseballLeague/BaseballLeague.DLL/BaseballLeague.DLL.csproj
+++ b/BaseballLeague/BaseballLeague.DLL/BaseballLeague.DLL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Config\Settings.cs" />
     <Compile Include="IBaseballRepo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestRepo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BaseballLeague.Models\BaseballLeague.Models.csproj">
